--- a/KU.tex
+++ b/KU.tex
@@ -9,7 +9,7 @@
 \begin{document}
 
 
-
+\part{Moodle jako narzędzie Szatana do gnębienia programistów.}
 \section{Implementacja}
 \subsection{Wprowadzenie}
 Jedną z części pracy było zaprojektowanie graficznego interfejsu użytkownika. Głównym problemem jaki się pojawił, był wybór odpowiedniego narzędzia. Celem jaki postawiono, była maksymalna zgodność projektowanych elementów z różnymi wersjami \emph{Moodle} --- zarówno wcześniejszymi, jak i późniejszymi. Zdecydowano, aby starać się korzystać z gotowych interfejsów programowania aplikacji \emph{(API)} dostarczonych przez \emph{Moodle}, tj. \emph{Page API}, \emph{Form API}, oraz \emph{Access API}. Wszystkie interfejsy są napisane przy użyciu języka PHP --- są wykonywane po stronie serwera. Konieczne okazało się też wykonanie niektórych skryptów po stronie klienta. Dlatego w projekcie wykorzystano również język skryptowy \emph{Java Script}.
@@ -28,8 +28,17 @@ Jako, że rozdział ten tyczy się grafiki, warto wspomnieć, że elementy na st
 \item Wewnątrz każdej sekcji znajduje się lista badań. Pod nią drukowana jest lista materiałów.
 \end{description}
 
+\subsection{Formularze}
+Projektując graficzny interfejs użytkownika, prędzej, czy później pojawia się potrzeba wyboru narzędzia do projektowania formularzy. Rozważano kilka możliwości. Po pierwsze, użycie po prostu czystego języka \emph{HTML}. Drugą opcją było użycie wbudowanych w \emph{Moodle} \emph{API} --- \emph{Form API} lub \emph{Output API}. Jako trzecią możliwość rozważano użycie zewnętrznych \emph{API} --- nie związanych z \emph{Moodle}.
+
+Odrzucono pomysł pierwszy oraz trzeci. Pomysł pierwszy wydał się zbyt pracochłonny. Z uwagi na dość mocno ograniczony czas, niemądrze byłoby programować coś od początku samemu, skoro ktoś inny już coś podobnego napisał. Nawet kosztem tego, że interfejs nie wyglądał dokładnie tak, jak go zaprojektowano. Ważne, aby był kompletny. Wariant trzeci był nie zgodny z założeniem mówiącym o korzystaniu z interfejsów \emph{Moodle} tam, gdzie to możliwe. Nie chciano, żeby użytkownik poczuł, że programowana wtyczka nie jest częścią systemu \emph{Moodle}. Co więcej, interfejs odbiegałby od wyglądu \emph{Moodle} i mógłby zostać oceniony jako nieintuicyjny. Zdecydowano się korzystać z \emph{Output API}.
+
+\emph{Output API} to zestaw funkcji, wprowadzonych od wersji \emph{Moodle} $2.0$. Umożliwiają one wstawianie na stronę standardowych elementów formularza, takich jak: etykiety, przyciski, linki, tabele etc. Niestety, z nieznanych powodów, to wspaniale wyposażone, z pełną dokumentacją i w pełni przydatne \emph{API} zostało usunięte z \emph{Moodle} już w wersji $2.2$. Co ciekawe niektórych elementów można nadal używać, lecz nie znaleziono dokumentu, który mówiłby o tym jakie dokładnie części tego \emph{API} można używać, a które zostały wycofane.
+
+Następcą \emph{Output API} został \emph{Form API}.
+
 \subsection{Role}
-Jedną z cech projektu, jest podział użytkowników na ankieterów i respondentów. W systemie \emph{Moodle} istnieje mechanizm do zarządzania rolami, który wydawał się adekwatny do użycia w tym przypadku. Rola jest to zbiór \emph{możliwości}. Możliwość można rozumieć jako prawo do wykonania określonego przez programistę fragmentu kodu.
+Jedną z cech projektu, jest podział użytkowników na ankieterów i respondentów. W systemie \emph{Moodle} istnieje mechanizm do zarządzania rolami, który wydawał się adekwatny do użycia w tym przypadku. Rola jest to zbiór \emph{możliwości}. Możliwość można rozumieć jako prawo do wykonania, określonego przez programistę, fragmentu kodu.
 
 \subsection{Formater kursu}
 Jednym z problemów jakie napotkano, była konieczność wyświetlania respondentom i ankieterom tylko określonych modułów. Ankieterzy powinni zobaczyć tylko te badania, które utworzyli oraz inne aktywności, zasoby. Respondenci powinni zobaczyć tylko te badania, w których mogą wypełnić ankietę, a także materiały, które mają prawo wyświetlać.
@@ -49,5 +58,9 @@ Wstępna wersja interfejsu, zaprojektowana przez architekta, wyglądała następ
 
 Problem stwarzało dodawanie ankiety wewnątrz tworzenia badania. Gdy tworzenie badania zaczyna się od zdefiniowania ankiety, to nie można od razu dodać jej do odpowiedniego badania, ponieważ to badanie jeszcze nie istnieje. W takim wypadku należałoby przechowywać gdzieś informację, że po utworzeniu badania ma dodać się do niego ankieta. Na przykład można w tym celu użyć dodatkowy parametr w adresie \emph{URL}. Dodatkowo, w \emph{Moodle}, przy kreowaniu nowego modułu, użytkownikowi wyświetlany jest domyślny formularz, w którym podaje się parametry potrzebne do zbudowania instancji modułu. Przyjmując, że badanie jest kojarzone z modułem, nie ma możliwości, aby przed zakończeniem tworzenia badania wstawić dodatkowy formularz.
 
-Rozwiązaniem 
+Rozwiązaniem jest prosta zamiana kolejności tworzenia badania oraz ankiety. Najpierw użytkownik tworzy badanie, czyli moduł. Dopiero wówczas ma możliwość sporządzenia ankiety. Podejście to ma kilka zalet: jest to zgodne z procedurą \emph{Moodle}, a co za tym idzie, bardziej intuicyjne dla użytkownika obeznanego z \emph{Moodle} oraz pozwala na łatwe dodanie ankiety do badania. Ponadto ankieter może zrezygnować z komponowania ankiety przy kreowaniu badania. Nie sposób nie zgodzić się z tezą, że jest to jedyny słuszny sposób dodawania nowego modułu \emph{iQuest}.
+
+\subsection{Tworzenie ankiety}
+
+
 \end{document}
