--- a/thesis/01-wstep.tex
+++ b/thesis/01-wstep.tex
@@ -2,7 +2,7 @@
 \chapter{Wstęp}
 
 Wstęp\footnote{Treść przykładowych rozdziałów została skopiowana
-z ,,zasad'' redakcji prac dyplomowych FCMu~\cite{fcm-red}.} do pracy powinien zawierać następujące elementy:
+z ,,zasad'' redakcji prac dyplomowych FCMu~.} do pracy powinien zawierać następujące elementy:
 \begin{itemize}
     \item krótkie uzasadnienie podjęcia tematu; 
     \item cel pracy (patrz niżej); 
