--- a/thesis/ppfcmthesis.cls
+++ b/thesis/ppfcmthesis.cls
@@ -80,7 +80,6 @@
     anchorcolor=black,
     filecolor=black,
     menucolor=black,
-    pagecolor=black,
     urlcolor=black,
     pdftitle={},
     pdfauthor={},
@@ -135,7 +134,9 @@ Supervisor\\\@ppsupervisor
 \renewcommand{\and}{\unskip{}, }%
 \renewcommand{\album}[1]{\unskip}%
 \cleardoublepage\thispagestyle{empty}\vspace*{\fill}%
-\footnotesize\singlespacing\noindent%
+\footnotesize
+%\singlespacing %Wyrzuciłem i kompiluje się
+\noindent%
 \raisebox{-1.3cm}{\includegraphics[height=1.5cm]{figures/template/logo-pp}}%
 \hspace{1.5em}%
 \begin{minipage}[t]{11cm}%
