--- a/thesis/03-praca-wlasna.tex
+++ b/thesis/03-praca-wlasna.tex
@@ -29,7 +29,7 @@ eksperymentów powinny być umieszczone na płycie CD, stanowiącej dodatek do p
 
 \section*{Styl tekstu}
 
-Należy\footnote{Uwagi o stylu pochodzą częściowo ze stron Macieja Drozdowskiego~\cite{mdro}.} 
+Należy\footnote{Uwagi o stylu pochodzą częściowo ze stron Macieja Drozdowskiego~.} 
 stosować formę bezosobową, tj.~\emph{w pracy rozważono ......, 
 w ramach pracy zaprojektowano ....}, a nie: \emph{w pracy rozważyłem, w ramach pracy zaprojektowałem}. 
 Odwołania do wcześniejszych fragmentów tekstu powinny mieć następującą postać: ,,Jak wspomniano wcześniej, ....'', 
