--- a/thesis/thesis-bachelor-polski.tex
+++ b/thesis/thesis-bachelor-polski.tex
@@ -1,23 +1,16 @@
-
-% Szkielet dla pracy inżynierskiej pisanej w języku polskim.
-
 \documentclass[polish,bachelor,a4paper,oneside]{ppfcmthesis}
-
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
-
-% Authors of the thesis here. Separate them with \and
 \author{%
    Krzysztof Marian Borowiak \album{94269} \and 
    Maciej Trojan \album{94378} \and 
    Krzysztof Urbaniak \album{94381} \and 
    Łukasz Wieczorek \album{94385}}
-\title{iQuest --- system rozszerzonych ankiet~studenckich}                   % Note how we protect the final title phrase from breaking
-\ppsupervisor{dr hab.~inż.~Bartosz Walter} % Your supervisor comes here.
-\ppyear{2013}                                         % Year of final submission (not graduation!)
-
+\title{iQuest --- system rozszerzonych ankiet~studenckich}
+\ppsupervisor{dr hab.~inż.~Bartosz Walter}
+\ppyear{2013}
 
 \begin{document}
 
@@ -42,14 +35,13 @@
 \input{04-zakonczenie.tex}
 
 % All appendices and extra material, if you have any.
-\cleardoublepage\appendix%
-\input{0a-zalacznik.tex}
-%\input{0b-pisanie-w-latexu.tex}
+%\cleardoublepage\appendix%
+%\input{file.tex}
 
 % Bibliography (books, articles) starts here.
 \bibliographystyle{plalpha}{\raggedright\sloppy\small\bibliography{bibliography}}
 
 % Colophon is a place where you should let others know about copyrights etc.
-\ppcolophon
+\ppcolophon%
 
 \end{document}
