--- a/thesis-old/thesis-bachelor-polski.tex
+++ b/thesis-old/thesis-bachelor-polski.tex
@@ -1,27 +1,16 @@
-
-% Szkielet dla pracy inżynierskiej pisanej w języku polskim.
-
 \documentclass[polish,bachelor,a4paper,oneside]{ppfcmthesis}
-
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage{usecase}
-\usepackage{float}
-\usepackage[table]{xcolor}
-\usepackage{mat}
-\usepackage{verbatim}
 
-% Authors of the thesis here. Separate them with \and
 \author{%
    Krzysztof Marian Borowiak \album{94269} \and 
    Maciej Trojan \album{94378} \and 
    Krzysztof Urbaniak \album{94381} \and 
    Łukasz Wieczorek \album{94385}}
-\title{iQuest -- system rozszerzonych ankiet~studenckich}                   % Note how we protect the final title phrase from breaking
-\ppsupervisor{dr hab.~inż.~Bartosz Walter} % Your supervisor comes here.
-\ppyear{2013}                                         % Year of final submission (not graduation!)
-
+\title{iQuest --- system rozszerzonych ankiet~studenckich}
+\ppsupervisor{dr hab.~inż.~Bartosz Walter}
+\ppyear{2013}
 
 \begin{document}
 
@@ -40,26 +29,19 @@
 
 % Main content of your thesis starts here.
 \mainmatter%
-\input{01Wprowadzenie.tex}
-\input{02Biznes.tex}
-\input{03Funkcjonalne.tex}
-\input{04Pozafunkcjonalne.tex}
-\input{05Architektura.tex}
-\input{06Implementacja.tex}
-\input{07Jakosc.tex}
-\input{08Wnioski.tex}
-\input{09Zakonczenie.tex}
+\input{01-wstep.tex}
+\input{02-teoria.tex}
+\input{03-praca-wlasna.tex}
+\input{04-zakonczenie.tex}
 
 % All appendices and extra material, if you have any.
-\cleardoublepage\appendix%
-\input{10Dodatki.tex}
-\input{11DodatkiB.tex}
-\input{12DodatkiC.tex}
+%\cleardoublepage\appendix%
+%\input{file.tex}
 
 % Bibliography (books, articles) starts here.
-\bibliographystyle{plunsrt}{\raggedright\sloppy\small\bibliography{bibliography}}
+\bibliographystyle{plalpha}{\raggedright\sloppy\small\bibliography{bibliography}}
 
 % Colophon is a place where you should let others know about copyrights etc.
-\ppcolophon
+\ppcolophon%
 
 \end{document}
